--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Max Serier
 
 # Short bio or description (displayed in the header)
-description: todo give description
+description: Applied Computer Science student who focuses on Game Development
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -21,7 +21,7 @@ footer-links:
   email: seriermax@gmail.com
   facebook:
   flickr:
-  github: mserier/mserier.github.io
+  github: 
   instagram:
   linkedin:
   pinterest:
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: mserier.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
