--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Max Serier's Blog
+name: Max Serier
 
 # Short bio or description (displayed in the header)
 description: Applied Computer Science student who focuses on Game Development
