--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   facebook:
   flickr:
   github: 
-  git: https://bitbucket.org/MSerier/
+  git: MSerier
   instagram:
   linkedin:
   pinterest:
